[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
image = "0.24.7"
rayon = "1.8.0"
ruwren = "0.4.10"
texture_packer = "0.27.0"
vulkano = "0.34.1"
vulkano-shaders = "0.34.0"
winit = "0.28"

[profile.dev]
opt-level = 1

[profile.release-lto]
inherits = "release"
lto = true
